--- a/index-new-anketa.html
+++ b/index-new-anketa.html
@@ -18,10 +18,10 @@
                         <li class="current_page_item dropdown">
                             <a href="index.html">Главная</a></li>
                         <li class="dropdown nav-item active-link">
-                            <a data-alias="ob-ubdd" class="item-1 no-link nav-link has-submenu" href="index-new-anketa.html">Заполнить анкету</a>
+                            <a class="item-1 no-link nav-link has-submenu" href="index-new-anketa.html">Заполнить анкету</a>
                         </li>
                         <li class="dropdown nav-item active-link">
-                            <a data-alias="normativnye-dokumenty" class="item-2 no-link nav-link has-submenu" href="https://ru.wordpress.org/" target="_blank">Админ</a>
+                            <a class="item-2 no-link nav-link has-submenu" href="https://ru.wordpress.org/" target="_blank">Админ</a>
                         </li>
                     </ul>
                 </div>
@@ -75,10 +75,44 @@
     <div class="container">
       <div class="content">
         <div class="right-side">
-          <h1 class="topic-title">Добро пожаловать!</h1>
-          <div class="topic-text">
-            Дорогие друзья, постоянный количественный рост и сфера нашей активности в значительной степени обуславливает создание новых предложений. Соображения высшего порядка, а также реализация намеченного плана развития влечет за собой процесс внедрения и модернизации всесторонне сбалансированных нововведений. С другой стороны постоянное информационно-техническое обеспечение нашей деятельности позволяет оценить значение дальнейших направлений развитая системы массового участия. С другой стороны сложившаяся структура организации влечет за собой процесс внедрения и модернизации дальнейших направлений развитая системы массового участия? Значимость этих проблем настолько очевидна, что консультация с профессионалами из IT способствует подготовке и реализации форм воздействия? Не следует, однако, забывать о...
-          </div>
+          <div class="topic-text">Отправьте нам сообщение</div>
+          <p>
+            Если у вас есть какие-то вопросы или предложения по сотрудничеству -
+            заполните форму ниже
+          </p>
+          <form action="send_mail.php" name="form" method="POST">
+            <div class="input-box">
+              <input
+                type="text"
+                placeholder="Ваше имя"
+                name="name"
+                id="name"
+              />
+            </div>
+            <div class="input-box">
+              <input
+                type="text"
+                placeholder="Введите email"
+                name="email"
+                id="email"
+                data-reg="^[-\w.]+@([A-z0-9][-A-z0-9]+\.)+[A-z]{2,4}$"
+              />
+            </div>
+            <div class="input-box">
+              <input
+                type="text"
+                placeholder="Введите телефон"
+                name="phone"
+                id="phone"
+              />
+            </div>
+            <div class="input-box message-box">
+              <textarea placeholder="Сообщение" name="message"></textarea>
+            </div>
+            <div class="button">
+              <input type="submit" id="button" value="Отправить" />
+            </div>
+          </form>
         </div>
       </div>
     </div>
